drupal-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal-deployment
  labels:
    app: drupal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drupal
  template:
    metadata:
      labels:
        app: drupal
    spec:
      containers:
      - name: drupal
        image: drupal:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: drupal-service
  spec:
    type: NodePort
  selector:
  app: drupal
  port
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
