drupal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: durpal-service
spec:
  selector:
    app: drupal
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
