gop-pv.yaml
# Drupal-MYSQL Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal-mysql
  labels:
    app: mysql
    tier: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      volumes:
        - name: drupal-mysql-storage
          persistentVolumeClaim:
            claimName: drupal-mysql-pvc
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: drupal-mysql-storage
          subPath: dbdata
---
apiVersion: v1
kind: Service
metadata:
  name: drupal-mysql-service
spec:
  type: ClusterIP
  selector:
    app: drupal-mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
#      nodePort: 30080
---
# DRUPAL deplyment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal
  labels:
    app: drupal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drupal
  template:
    metadata:
      labels:
        app: drupal
    spec:
      volumes:
      - name: drupal-storage
        persistentVolumeClaim:
          claimName: drupal-pvc
      containers:
      - name: drupal
        image: drupal:8.6
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/www/html/modules
          name: drupal-storage
          subPath: modules
        - mountPath: /var/www/html/profiles
          name: drupal-storage
          subPath: profiles
        - mountPath: /var/www/html/sites
          name: drupal-storage
          subPath: sites
        - mountPath: /var/www/html/themes
          name: drupal-storage
          subPath: themes
---
# mkdir in nodes 
mkdir /drupal-mysql-data && mkdir  /drupal-data
