drupal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drupal-ingress
spec:
  defaultBackend:
    service:
      name: drupal-service
      port:
        number: 8081
